Make logging a bit more verbose.